# datafusion-tui-archived

./: Cargo.toml  README.md
src/: editor.rs  lib.rs  main.rs
src/app/: app.rs  mod.rs  ui.rs
src/app/datafusion/: context.rs  display.rs  mod.rs
src/app/editor/: editor.rs
src/app/handlers/: edit.rs  mod.rs  normal.rs
src/cli/: mod.rs  print_options.rs
src/events/: events.rs  key.rs  mod.rs
